# rob6_mobilebase

./: README.md  crust_arm_mobilemanipulator_crust_base_linktool_link_5000_1.000000_1.000000.ikcache  run_all.sh
Crust crawler version for urdf of crustcrawler new frame og reslsense/: CMakeLists.txt  package.xml
Crust crawler version for urdf of crustcrawler new frame og reslsense/launch/: display.launch  gazebo.launch
Crust crawler version for urdf of crustcrawler new frame og reslsense/meshes/: link_2.STL  realsense_link.STL
Crust crawler version for urdf of crustcrawler new frame og reslsense/urdf/: Crust crawler version for urdf of crustcrawler new frame og reslsense.csv  Crust crawler version for urdf of crustcrawler new frame og reslsense.urdf
mobile_base_assembly hvoe hjulenes frame forhåbelig passer/: CMakeLists.txt  package.xml
mobile_base_assembly hvoe hjulenes frame forhåbelig passer/launch/: display.launch  gazebo.launch
mobile_base_assembly hvoe hjulenes frame forhåbelig passer/urdf/: mobile_base_assembly hvoe hjulenes frame forhåbelig passer.csv  mobile_base_assembly hvoe hjulenes frame forhåbelig passer.urdf
mobile_base_assembly med crustframes/: CMakeLists.txt  package.xml
mobile_base_assembly med crustframes/launch/: display.launch  gazebo.launch
mobile_base_assembly med crustframes/urdf/: mobile_base_assembly med crustframes.csv  mobile_base_assembly med crustframes.urdf
mobile_base_assembly new real frames for crust with realsense/: CMakeLists.txt  package.xml
mobile_base_assembly new real frames for crust with realsense/launch/: display.launch  gazebo.launch
mobile_base_assembly new real frames for crust with realsense/urdf/: mobile_base_assembly new real frames for crust with realsense.csv
mobile_base_assembly rigrig størrelse hjul/: CMakeLists.txt  package.xml
mobile_base_assembly rigrig størrelse hjul v2/: CMakeLists.txt  package.xml
mobile_base_assembly rigrig størrelse hjul v2/launch/: display.launch  gazebo.launch
mobile_base_assembly rigrig størrelse hjul v2/meshes/: laser.STL
mobile_base_assembly rigrig størrelse hjul v2/urdf/: mobile_base_assembly rigrig størrelse hjul v2.urdf
mobile_base_assembly rigrig størrelse hjul/launch/: display.launch  gazebo.launch
mobile_base_assembly v01/: CMakeLists.txt  package.xml
mobile_base_assembly with arm/: CMakeLists.txt  package.xml
src/mobile_base_description/: CMakeLists.txt  package.xml
src/mobile_base_description/config/: default.rviz  ekf.yaml  keepout_params.yaml  mapper_params_online_async.yaml  nav2_params.yaml  nav2_sim_params.yaml  slam_mapping.yaml  teb_params.yaml  twist_mux.yaml
src/mobile_base_description/launch/: all_launch.py  base_station_launch.py  headless_navigation.py  headless_navigation_launch.py  joystick_launch.py  keepout_filter_launch.py  navigation_launch.py  navigation_sim_launch.py  online_async_launch.py  pi_launch.py  rviz_gazebo.launch.py  rviz_test.launch.py  sim.launch.py  simple_commander_launch.py  system.launch.py  test_sim_launch.py
src/mobile_base_description/maps/: map.data  map.pgm  map.yaml
src/mobile_base_description/maps/0_04res/: map.yaml  map_keepout.yaml
src/mobile_base_description/maps/0_04res/headless/: map.pgm  map.yaml  map_keepout.pgm  map_keepout.yaml
src/mobile_base_description/maps/hall/: hall.pgm  hall.yaml
src/mobile_base_description/maps/hall2/: hall.pgm  hall.yaml  map.pgm  map.yaml  map3 headless.yaml  map3.yaml  map3_edited.pgm  map3_headless.pgm  map3_keepout headless.yaml  map3_keepout.pgm  map3_keepout.yaml  map3_keepout_test.pgm  map3_keepout_test.yaml
src/mobile_base_description/maps/hall2/headless/: map.yaml  map3_headless.yaml  map3_keepout_headless.yaml  map_keepout.pgm  map_keepout.yaml
src/mobile_base_description/maps/robocup_hall/: map.yaml  map_keepout.yaml  map_keepout1.pgm  map_keepout_ref.pgm  map_raw.pgm  map_refined.pgm  map_refined1.pgm
src/mobile_base_description/maps/robocup_hall/headless/: map.yaml  map_keepout.yaml
src/mobile_base_description/maps/sim/: map.pgm  map.yaml  map_sim.pgm  map_sim.yaml  map_sim_keepout.pgm  map_sim_keepout.yaml  map_sim_keepout2.pgm  map_sim_keepout2.yaml  sim_map.pgm  sim_map.yaml  sim_map_keepout.pgm  sim_map_keepout.yaml
src/mobile_base_description/meshes/: crust_base_link.STL  laser.STL  left_wheel.STL  right_wheel.STL
src/mobile_base_description/meshes3/: right_wheel.STL
src/mobile_base_description/meshesold2/: crust_base_link.STL  laser.STL
src/mobile_base_description/src/: debug_deleteme.txt  joy_control.cpp  main_program.cpp  odomZOH.cpp  odom_ZOH.cpp  placeholer_simplecommander.txt  ticks_to_odom.cpp
src/mobile_base_description/urdf/: base_footprint _mobile.xacro  base_footprint.xacro  gazebo.xacro  lidar.xacro  mobile_base.urdf.xacro  mobile_base.xacro  mobile_base_assembly rigrig størrelse hjul v2.csv  mobile_base_assembly v01.csv  mobile_base_crust.urdf.xacro  mobile_base_gazebo.urdf.xacro  mobile_base_gazebo.xacro  mobile_base_old.urdf.xacro  mobile_base_realsense.urdf  mobile_base_realsense.urdf.xacro  ros2_control.xacro
(+144 files in other folders)
