<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mobile_base_description</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="due6230@gmail.com">lass6230</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <!-- <depend>chrono</depend> -->
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  
  
  
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
    <!--$(find mobile_base_description)-->
    <gazebo_ros gazebo_model_path = "$(find install/mobile_base_description/share/)"/>
    <!--<gazebo_ros gazebo_model_path = "/home/lass6230/github/rob6_mobile_base/install/mobile_base_description/share/"/>-->
  </export>
</package>
